--- a/test/OpenTelemetry.Exporter.Geneva.Benchmark/OpenTelemetry.Exporter.Geneva.Benchmark.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.Benchmark/OpenTelemetry.Exporter.Geneva.Benchmark.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
 		<OutputType>Exe</OutputType>
-        <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
+        <TargetFrameworks>net6.0</TargetFrameworks>
         <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462;net47;net471;net472;net48</TargetFrameworks>
         <NoWarn>$(NoWarn),SA1201,SA1202,SA1204,SA1311,SA1123</NoWarn>
 	</PropertyGroup>
@@ -11,7 +11,6 @@
 		<PackageReference Include="BenchmarkDotNet" Version="$(BenchmarkDotNetPkgVer)" />
 		<PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="$(OpenTelemetryExporterInMemoryPkgVer)" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="[6.0.0,)" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="5.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
