--- a/examples/process-instrumentation/process-instrumentation.csproj
+++ b/examples/process-instrumentation/process-instrumentation.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry.Exporter.Prometheus.HttpListener" Version="1.4.0-beta.1" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="0.1.0-alpha.1" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Instrumentation.Process\OpenTelemetry.Instrumentation.Process.csproj" />
   </ItemGroup>
 </Project>
