--- a/NuGet.config
+++ b/NuGet.config
@@ -3,7 +3,8 @@
   <packageSources>
     <clear />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-    <add key="MyGet" value="https://www.myget.org/F/opentelemetry/api/v3/index.json" />
+    <!-- Uncomment following source, if you need to use nightly builds for OTel SDK/API
+      <add key="MyGet" value="https://www.myget.org/F/opentelemetry/api/v3/index.json" /> -->
   </packageSources>
   <disabledPackageSources />
 </configuration>
