--- a/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
+++ b/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
@@ -5,6 +5,6 @@
     <MinVerTagPrefix>Extensions.Docker-</MinVerTagPrefix>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry" Version="1.3.0" />
+    <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
   </ItemGroup>
 </Project>
