--- a/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
@@ -16,7 +16,7 @@
         </PackageReference>
         <DotNetCliToolReference Include="dotnet-xunit" Version="$(DotNetXUnitCliVer)" />
         <PackageReference Include="MySql.Data" Version="6.10.7" />
-        <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryPkgVer)" />
+        <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
     </ItemGroup>
 
     <ItemGroup>
