--- a/test/OpenTelemetry.Instrumentation.Runtime.Tests/OpenTelemetry.Instrumentation.Runtime.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.Runtime.Tests/OpenTelemetry.Instrumentation.Runtime.Tests.csproj
@@ -8,7 +8,7 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="$(CoverletCollectorPkgVer)" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
-      <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="$(OpenTelemetryExporterInMemoryPkgVer)" />
+      <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.4.0-beta.2" />
         <PackageReference Include="xunit" Version="$(XUnitPkgVer)" />
         <PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="xunit.runner.visualstudio" Version="$(XUnitRunnerVisualStudioPkgVer)">
             <PrivateAssets>all</PrivateAssets>
