use filescoped namespaces

--- a/.editorconfig
+++ b/.editorconfig
@@ -141,6 +141,7 @@ dotnet_diagnostic.IDE0002.severity = warning
 
 # IDE0005: Remove unnecessary import
 dotnet_diagnostic.IDE0005.severity = warning
+csharp_style_namespace_declarations = file_scoped:warning
 
 [obj/**.cs]
 generated_code = true
