--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - uses: actions/setup-dotnet@v3.0.3
+      with:
+        dotnet-version: '7.0.x'
+        
     - name: Install dependencies
       run: dotnet restore
 
