--- a/src/OpenTelemetry.Extensions/OpenTelemetry.Extensions.csproj
+++ b/src/OpenTelemetry.Extensions/OpenTelemetry.Extensions.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(Configuration)' == 'Debug'">$(TargetFrameworks);net6.0</TargetFrameworks> <!-- Added just to get proper nullable analysis in IDE -->
     <Description>OpenTelemetry .NET SDK preview features and extensions</Description>
-    <MinVerTagPrefix>Preview-</MinVerTagPrefix>
+    <MinVerTagPrefix>Extensions-</MinVerTagPrefix>
     <Nullable>enable</Nullable>
     <EnableAnalysis>true</EnableAnalysis>
     <EnablePublicApi>true</EnablePublicApi>
