--- a/.github/workflows/ci-md.yml
+++ b/.github/workflows/ci-md.yml
@@ -15,7 +15,16 @@ on:
 
 jobs:
   build-test:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        os: [ windows-latest, ubuntu-latest ]
+        version: [ net462, netcoreapp3.1, net6.0 ]
+        exclude:
+        - os: ubuntu-latest
+          version: net462
 
     steps:
       - run: 'echo "No build required"'
