--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -1,4 +1,4 @@
-name: validate-documentation
+name: markdownlint
 
 on:
   push:
@@ -17,12 +17,6 @@ jobs:
     steps:
     - name: check out code
       uses: actions/checkout@v3.1.0
-
-    - name: verify links by lycheeverse
-      uses: lycheeverse/lychee-action@v1.5.1
-      with:
-        fail: true
-        args: "--threads 1 --max-concurrency 1 --verbose --no-progress './**/*.md' './**/*.html'"
 
     - name: install markdownlint-cli
       run: sudo npm install -g markdownlint-cli
