--- a/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
+++ b/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>;net462;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
     <Description>OpenTelemetry Extensions - Container Resource Detector from Docker environment.</Description>
     <MinVerTagPrefix>Extensions.Docker-</MinVerTagPrefix>
   </PropertyGroup>
