--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
       matrix:
         os: [ windows-latest, ubuntu-latest ]
-        version: [ net462, netcoreapp3.1, net6.0 ]
+        version: [ net462, netcoreapp3.1, net6.0, net7.0 ]
         exclude:
         - os: ubuntu-latest
           version: net462
@@ -27,6 +27,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - uses: actions/setup-dotnet@v3.0.3
+      with:
+        dotnet-version: '7.0.x'
+        
     - name: Install dependencies
       run: dotnet restore
 
