--- a/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
+++ b/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
+    <!-- OmniSharp/VS Code requires TargetFrameworks to be in descending order for IntelliSense and analysis. -->
+    <TargetFrameworks>net7.0;net6.0;netcoreapp3.1</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462</TargetFrameworks>
   </PropertyGroup>
 
